Fix matrix chat template
Zuul might generate a lengthy warning section embedded within the
message. To prevent an excessively long title in the Matrix chat.
This commit adds the `filterMessage` function that can be utilized within
the template to isolate the message part.

This function is then used in the default template.

Signed-off-by: Matej Feder <matej.feder@dnation.cloud>

--- a/templates/matrix_message.tmpl
+++ b/templates/matrix_message.tmpl
@@ -10,7 +10,9 @@
   {{ $color = "red" }}
   {{ $icon = "🚨" }}
 {{ end }}
-<h4><font color={{ $color }}>{{ $icon }} {{ .Message }}</font></h4>
+{{ $message := filterMessage (.Message) }}
+
+<h4><font color={{ $color }}>{{ $icon }} {{ $message }}</font></h4>
 <b>Pipeline:</b> {{ .Pipeline }}<br>
 <b>Project:</b> <a href="https://github.com/{{ .Project }}/">{{ .Project }}</a><br>
 {{ if not .Change }}
